# macPerplex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  audio_processor.py  config.py.example  inspect_research_button.py  inspect_upload_chip.py  macPerplex.py  overlay_process.py  prompt_cleanup.py  pyproject.toml  requirements.txt  response_tts.py  test_audio_processor.py  test_overlay.py
