[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macperplex"
version = "1.0.0"
description = "Voice-controlled AI assistant for Perplexity with screenshot capture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "macPerplex", email = ""}
]
keywords = ["ai", "voice", "perplexity", "screenshot", "automation", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "selenium>=4.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pyobjc-framework-Cocoa>=9.0",
    "pyobjc-framework-Quartz>=9.0",
    "Pillow>=10.0.0",
    "PySide6>=6.0.0",
    "rich>=13.0.0",
    "pynput>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sunnypsmith/macPerplex"
Repository = "https://github.com/sunnypsmith/macPerplex"
Issues = "https://github.com/sunnypsmith/macPerplex/issues"

[project.scripts]
macperplex = "macperplex.main:main"

[tool.setuptools]
packages = ["macperplex"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready

